Fix bottom CTAs on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,6 +91,19 @@ $placeholder: $text-muted-max;
 .accent-text {
   color: $accent-color;
 }
+ul.btn-group {
+	position: relative;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	vertical-align: middle;
+	flex-wrap: wrap;
+	li {
+		margin: auto;
+		@media #{$medium-and-down} {
+			margin-bottom: 10px;
+		}
+	}
+}
 .small {
   font-size: 85%;
 }
